1998-10-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_init): Set the GTK_CAN_FOCUS flag
	in the widget.

	* gnome-color-picker.c (gnome_color_picker_set_title): Set the
	title of the color selection dialog if it exists.

	* gnome-init.c (our_gtk_options): Fixed spelling in the option
	descriptions.

	* gnome-canvas.c (gnome_canvas_item_grab_focus): Set the
	ev.focus_change.window field to the canvas's bin window.
	(emit_event): Rearranged some of the focusing tests.

Mon Oct 19 11:57:51 1998  Owen Taylor  <otaylor@redhat.com>

	* gnome-mdi.c: Change "drag_data_received" callback
	to have proper signature.

1998-10-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: removed dnd_type member and g_free()ing
	of it, since owen's changes made it redundant.
	
Sun Oct 18 18:59:33 1998  Owen Taylor  <otaylor@gtk.org>

	* gnome-mdi.[ch] gnome-color-selector.c gnome-file-entry.c: 
	Adapted to the new GTK+ DND API.

	* gnome-stock.[ch]: Added new function
	gnome_stock-pixmap_gdk() to get a stock pixmap as
	a GdkPixmap/GdkMask.

	* gtk-socket.[ch]: Changes to enable DND proxying to
	the embedded plug.

1998-10-17  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-stock.c: Removed `BUTTON_DEFBRD_WIDTH' and
	`BUTTON_DEFBRD_HEIGHT' constants.

	* gnome-uidefs.h: Removed `GNOME_BUTTON_WIDTH' and
 	`GNOME_BUTTON_HEIGHT' constants.  These are not used by any
 	application AFAIK.

	* gnome-stock.c (gnome_pixmap_button): Do not force the button
 	size anymore.

	* gnome-dialog.c (gnome_dialog_append_button): Use
 	`GTK_WIDGET_SET_FLAGS()' instead of `gnome_button_can_default()'
	to set the `GTK_CAN_DEFAULT' flag.

	* gnome-stock.c (gnome_button_can_default): Do nothing.  Just spit 
	out a warning, saying that this function is now deprecated.

1998-10-16    <jrb@aware-of-vacuity.labs.redhat.com>

	* gnome-messagebox.h: changed comment to redirect user to the
	right code.
